--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ codigos/topico_3/house_data_pairplot.pdf
 codigos/topico_3/.ipynb_checkpoints/
 codigos/.ipynb_checkpoints/
 .ipynb_checkpoints/
+codigos/topico_3/.ipynb_checkpoints/
