--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ codigos/topico_3/.ipynb_checkpoints/
 codigos/.ipynb_checkpoints/
 .ipynb_checkpoints/
 codigos/topico_3/.ipynb_checkpoints/
+Projeto/
